Login/Register pages done

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,66 +1,14 @@
-@import "variables.scss";
 
-//Variables
-// .my-flix {
-//   color: $color;
-// }
+$primary: #2183d3;
+$secondary: #abffff;
+$color:$primary;
 
-$color: steelblue;
 
-.bg-main {
-  background-color: #012E40;
-  min-height: 100vh;
+
+// @import 'node_modules/bootstrap/scss/bootstrap.scss';
+
+
+
+.my-flix {
+  color: $color;
 }
-
-//Styling
-
-.desktop, .desktop-long {
-  display: inherit;
-}
-
-.movie_image {
-  width: 350px;
-}
-
-.mobile, .xs {
-  display: none;
-}
-
-@media all and (max-width: 575px) {
-  .movie_image {
-    min-width: 120px;
-  }
-
-  .xs {
-    display: inherit;
-  }
-}
-
-@media all and (max-width: 390px) {
-  .desktop-long {
-    display: none
-  }
-}
-
-@media all and (max-width: 250px) {
-  * {
-    font-size: 0.8rem;
-  }
-
-  .desktop {
-    display: none;
-  }
-
-  .mobile {
-    display: inherit;
-  }
-}
-
-@media all and (min-width: 1400px) {
-  .movie_image {
-    width:500px;
-  }
-}
-
-//Import Bootstrap scss
-@import '~bootstrap/scss/bootstrap.scss';
