--- a/src/components/movie-card/movie-card.scss
+++ b/src/components/movie-card/movie-card.scss
@@ -1,29 +1,57 @@
-img {
-    max-width: 100px;
-  }
-  
-  .card {
+.movie-card {
+    position: relative;
+    width: 100%;
     cursor: pointer;
-  }
+    transition: all 0.2s ease-in-out;
+    min-width: 200px;
   
-  .card:hover {
-    background-color: #efefef;
-  }
+    &:hover {
+      transform: translateY(-10px);
+    }
   
-  .card-title {
-    font-weight: 700 !important;
-  }
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      background-color: rgba(0, 0, 0, 0.6);
+      color: #fff;
+      padding: 10px;
+      border-radius: 5px;
+      opacity: 0;
+      transition: all 0.3s ease;
+    }
   
-  .card-text {
-    font-size: smaller;
-  }
+    &:hover::before {
+      opacity: 0.5;
+      transform: translate(-50%, -50%) scale(1);
+    }
   
-  .setFavorite {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
+    img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
   
-  a {
-    text-decoration: none !important;
+    .card-body {
+      background-color: #f8f9fa;
+      border-top: 3px solid #dee2e6;
+      display: flex;
+      flex-direction: column;
+    //   align-items: center;
+    //   justify-content: center;
+    //   width: 100%;
+    //   height: 130px;
+    }
+  
+    .card-title {
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #212529;
+    }
+  
+    .card-text-wrapper {
+      text-decoration: none;
+      color: #6c757d;
+    }
   }
